--- a/pipe/src/app/app.component.html
+++ b/pipe/src/app/app.component.html
@@ -9,7 +9,7 @@
                 <input id="new-todo" class="w-full px-4 py-3 bg-white border border-peach-500 text-base font-serif rounded outline-peach-400 mx-1" placeholder="What needs to be done?" 
                 #todoinput/>
                 <button class="bg-transparent hover:bg-pink-500 text-purple-800 font-semibold hover:text-white py-2 px-4 mx-1 border border-purple-800 hover:border-transparent rounded"
-                    (click)="addNewTodo(todoinput)">
+                    (click)="addNewTodo()">
                      ToDo
                   </button>
             </div>
